# codex

./: .gitignore  NOTICE  README.md  handoff-runtime-codex-sessions.md  justfile  package.json  patch3.diff  patch_agentmemory.diff  patch_tests.diff
.github/workflows/: README.md  rust-ci.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/app-server/: README.md
codex-rs/cli/: Cargo.toml
codex-rs/core/: Cargo.toml  (+1 more)
codex-rs/hashline-transaction/: BUILD.bazel  Cargo.toml
codex-rs/hashline-transaction/src/: capability.rs  capability_tests.rs  edits.rs  edits_tests.rs  executor.rs  executor_test_mutation.rs  executor_test_recovery.rs  executor_test_support.rs  executor_tests.rs  journal.rs  journal_decode.rs  journal_state.rs  journal_tests.rs  lib.rs  limits.rs  observation.rs  planner.rs  planner_tests.rs  prepared.rs  preview.rs  preview_tests.rs  recovered.rs  recovery.rs  recovery_before_apply_tests.rs  recovery_rollback.rs  recovery_scan_tests.rs  recovery_storage_tests.rs  recovery_terminal_tests.rs  recovery_tests.rs  recovery_verify.rs  request_executor.rs  request_executor_tests.rs  rollback.rs  types.rs
docs/: agentmemory-codex-memory-replacement-spec.md  agentmemory-payload-quality-followup.md  agentmemory-payload-quality.md  claude-code-hooks-parity.md  config.md  example-config.md  fork-history-squash-plan.md  fork-intent.md  hooks.md  license.md  public-release-notes.md  upstream-maintenance-candidates.md  upstream-replay-plan.md
scripts/: stage_npm_packages.py
specs/: _template.md  hashline-audit-hardening.md  hashline-transaction-greenfield.md
(+605 files in other folders)
