[package]
name = "codex-hashline-transaction"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
codex-utils-path-uri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh32"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
pretty_assertions = { workspace = true }

[lib]
doctest = false
